--- a/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanelButtonList.scss
+++ b/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanelButtonList.scss
@@ -9,6 +9,8 @@
 
 	.sub-overflow-container,
 	.js-get-nav-panel-button-list-component-sub-overflow-container {
+		transition: v.$nav-panel-button-list-sub-overflow-container-transition;
+
 		overflow-y: auto;
 		overflow-x: hidden;
 
@@ -40,13 +42,18 @@
 	.js-get-nav-panel-button-list-component-sub-overflow-container--scrollbar-present {
 		margin-top: v.$nav-panel-button-list-sub-overflow-container-margin-top-bottom;
 		padding: 10px 0 20px 0;
-		box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.1),
-			inset 0 -7px 9px -7px rgba(0, 0, 0, 0.1);
+		box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.1);
+
+		transition: v.$nav-panel-button-list-sub-overflow-container-transition;
 	}
 
 	.sub-overflow-container--bottom-spacing,
 	.js-get-nav-panel-button-list-component-sub-overflow-container--bottom-spacing {
 		margin-bottom: v.$nav-panel-button-list-sub-overflow-container-margin-top-bottom;
+		box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.1),
+			inset 0 -7px 9px -7px rgba(0, 0, 0, 0.1);
+
+		transition: v.$nav-panel-button-list-sub-overflow-container-transition;
 	}
 
 	@mixin buttonsShared() {
